--- a/Polls/static/Polls/style.css
+++ b/Polls/static/Polls/style.css
@@ -34,20 +34,21 @@ body {
 .contentBar {
     background-color: rgb(148 132 30);
     border:solid;
-    height: 100px;
+    height: auto;
     margin-top: 10px;
+     overflow: hidden;
 }
 
 
-.contentBar div{ 
+.contentDiv{
     height: 100%;
     width: 20%;
-    
+
     float: left;
 
 }
 
-.contentBar  p {
+.BookPageP {
     text-align: center;
     font-style: italic;
 }
@@ -55,5 +56,27 @@ body {
 .BookImage {
     height: 100px;
     width: 100px;
+
+}
+
+
+.BookImageDetai {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+.slugButton {
+  float: right;
+  /* background-color: red; */
+  padding: 10px;
+  height: 100%;
+  width:40%;
+}
+
+.slugButton a{
 
 }
