--- a/Polls/templates/Polls/AddBook.html
+++ b/Polls/templates/Polls/AddBook.html
@@ -2,14 +2,14 @@
 
 
 {% block title %}
-  {{ book.title }} -  {{ block.super }}
+Добавить книгу  
 {% endblock %}
 
 
 
 {% block content %}
 
-  <h1>Добавить книгу  {{ book.title }}</h1>
+  <h1>Добавить книгу </h1>
 
   <div class="contentBar">
 
