--- a/Polls/templates/Polls/BooksPage.html
+++ b/Polls/templates/Polls/BooksPage.html
@@ -6,7 +6,95 @@
 
 {% block content %}
 
-  <a class = "btn btn-primary CreateBookUrl" href="{% url 'createViewUrl' %}">Создать книгу</a>
+  <!-- <a class = "btn btn-primary CreateBookUrl" href="{% url 'createViewUrl' %}">Создать книгу</a> -->
+
+
+
+  <button type="button" class="btn btn-primary CreateBookUrl" data-toggle="modal" data-target="#exampleModal">
+    Создать книгу
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+
+
+          <form action="/Book/create/" method="post">
+
+            {% csrf_token %}
+
+            <div class="form-group">
+
+                <input name = "title"  class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Название книги">
+            </div>
+
+          <div class="form-group">
+             <label for="exampleFormControlSelect2">Автор</label>
+             <select name ='Author' multiple class="form-control" id="exampleFormControlSelect2">
+
+               {% for author in authors  %}
+                   <option> {{ author }} </option>
+               {% endfor %}
+
+             </select>
+          </div>
+
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Описание</label>
+            <textarea name = "description" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+
+          <div class="form-group">
+               <label for="exampleInputEmail1">слаг</label>
+              <input name = 'slug' class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Слаг">
+          </div>
+
+          <div class="form-group">
+           <label for="exampleFormControlFile1">Картинка</label>
+           <input name = 'image' type="file" class="form-control-file" id="exampleFormControlFile1">
+          </div>
+
+          <div class="form-group">
+            <label for="exampleFormControlSelect2">Жанр</label>
+            <select name = 'Genre' multiple class="form-control" id="exampleFormControlSelect2">
+              {% for genre in genres  %}
+                  <option> {{ genre }} </option>
+              {% endfor %}
+            </select>
+          </div>
+
+
+
+
+
+
+
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <!-- <span aria-hidden="true">&times;</span> -->
+          </button>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Save changes</button>
+        </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+
+
+
+
+
+
 <h1>Книги</h1>
 
 
@@ -38,8 +126,6 @@
       </div>
 
 </div>
-
-
 
 {% endfor %}
 
