--- a/Polls/templates/Polls/BookDetail.html
+++ b/Polls/templates/Polls/BookDetail.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <h1>Книга {{ book.title }}</h1>
-<div class = "contentBar">
+<div class = "contentBar card bg-dark text-white">
 
   {% if book.image %}
   <img class = "BookImageDetai" src="{{ book.image.url}}" >
