--- a/Polls/templates/Polls/index.html
+++ b/Polls/templates/Polls/index.html
@@ -4,16 +4,94 @@
 
 {% block content %}
 
+<div id="mySidenav" class="sidenav">
 
+
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <h1 class = "text-center">Фильтры</h1>
+  <hr style = "
+   border-top: 1px solid white;
+  ">
+  <form class="" action="/filter/" method="post">
+    {% csrf_token %}
+
+  <h3 class = "text-center">Жанры</h3>
+  {% for genre in genres %}
+<div class="text-center">
+  <input name = 'genre' class="form-check-input " type="checkbox" value="{{ genre.id }}" id="flexCheckDefault">
+  <label class="form-check-label" for="flexCheckDefault">
+      {{ genre.title }}
+  </label>
+  <!-- <br> -->
+</div>
+  {% endfor %}
+
+  <hr style = "
+   border-top: 1px solid white;
+  ">
+
+  <h3 class = "text-center">Авторы</h3>
+  {% for aut in authors %}
+<div class="text-center">
+  <input name = "aut" class="form-check-input " type="checkbox" value="{{ aut.id }}" id="flexCheckDefault">
+  <label class="form-check-label" for="flexCheckDefault">
+      {{ aut.Name }}
+  </label>
+</div>
+  {% endfor %}
+  <hr style = "
+   border-top: 1px solid white;
+  ">
+  <div class="text-center">
+  <button type="submit" class="btn btn-light ">Применить фильтры</button>
+  </div>
+</form>
+
+</div>
+
+
+
+<div class="container">
 
 <h1>Жанры книг:</h1>
-
+<a class = 'btn btn-warning float-left ml-3 mt-3' href="?genre_id=0"><h1>Все</h1></a>
 {% for genre in genres %}
 
-  <a class = "btn btn-warning float-left ml-3 mt-3"  href="{{ genre.get_absolute_url }}"><h1>{{genre.title}}</h1></a>
-
-
+  <a class = "btn btn-warning  ml-3 mt-3"  href="?genre_id={{ genre.id }}"><h1>{{genre.title}}</h1></a>
 
 {% endfor %}
+
+
+<div class = 'row py-5'>
+{% for book in books %}
+<div class="card col-md-4" style="width: 18rem;">
+  {% if book.image %}
+      <img class="card-img-top CartImg" src="{{ book.image.url}}" alt="Card image cap">
+  {% else %}
+    <div class="EmptyImagePlace">
+
+    </div>
+  {% endif %}
+  <div class="card-body">
+    <h5 class="card-title">Название: {{ book.title }}</h5>
+    <p class="card-text">Описание:{{ book.description }}</p>
+    <p class="card-text">:{{ book.description }}</p>
+
+
+
+    <p>авторы:</p>
+    {% for auth in book.Author.all %}
+      <p>{{ auth.Name }}</p>
+    {% endfor %}
+    <a href="/Book/{{book.slug}}" class="btn btn-primary">Подробнее</a>
+  </div>
+</div>
+{% endfor %}
+</div>
+
+</div>
+
+
+
 
 {% endblock %}
