Users StorageData.js and fix UpdateView

--- a/Polls/templates/Polls/BooksPage.html
+++ b/Polls/templates/Polls/BooksPage.html
@@ -21,7 +21,7 @@
         <div class="modal-header">
 
 
-          <form action="/Book/create/" method="post">
+          <form action="/Book/create/" method="post" enctype="multipart/form-data">
 
             {% csrf_token %}
 
