--- a/Polls/templates/Polls/BookUpdate.html
+++ b/Polls/templates/Polls/BookUpdate.html
@@ -13,7 +13,7 @@
 
   <div class="contentBar">
 
-  <form class="" method="post">
+  <form class="" method="post" enctype="multipart/form-data" >
       {% csrf_token %}
       {{ form.as_p }}
       <button class = 'btn btn-success' type="submit" name="button" value = 'save'>Update!</button>
