--- a/Polls/templates/Polls/index.html
+++ b/Polls/templates/Polls/index.html
@@ -4,6 +4,9 @@
 
 {% block content %}
 
+
+
+
 <div id="mySidenav" class="sidenav">
 
 
@@ -12,13 +15,16 @@
   <hr style = "
    border-top: 1px solid white;
   ">
-  <form class="" action="/filter/" method="post">
-    {% csrf_token %}
+
+
+  <form class="" action="/filterAndSearch/" method="" onsubmit="setGenre('{{ genres.id }}'); setAuthor('{{ authors.id }}');">
+
 
   <h3 class = "text-center">Жанры</h3>
   {% for genre in genres %}
 <div class="text-center">
-  <input name = 'genre' class="form-check-input " type="checkbox" value="{{ genre.id }}" id="flexCheckDefault">
+  <input name = 'genre' onclick = "setGenre('{{ genre.id }}')" class="form-check-input filtBtnG{{ genre.id }}" type="checkbox" value="{{ genre.id }}" 
+  id="flexCheckDefault " >
   <label class="form-check-label" for="flexCheckDefault">
       {{ genre.title }}
   </label>
@@ -33,7 +39,7 @@
   <h3 class = "text-center">Авторы</h3>
   {% for aut in authors %}
 <div class="text-center">
-  <input name = "aut" class="form-check-input " type="checkbox" value="{{ aut.id }}" id="flexCheckDefault">
+  <input name = "aut" class="form-check-input filtBtnA{{ aut.id }}" onclick = "setAuthor('{{ aut.id }}')" type="checkbox" value="{{ aut.id }}" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
       {{ aut.Name }}
   </label>
@@ -90,7 +96,6 @@
 </div>
 
 </div>
-
 
 
 
